--- a/config/locales/cpanel.zh-TW.yml
+++ b/config/locales/cpanel.zh-TW.yml
@@ -6,7 +6,7 @@
       users: "使用者"
       sections: "分類"
       nodes: "節點"
-      wiki: "維基"
+      wiki: "教程"
       topics: "討論"
       replies: "回應"
       photos: "圖片"
@@ -23,6 +23,6 @@
       please_do_not_modify_key: "請勿修改 key"
       edit_setting: "修改設定"
     users:
-      trust_user_can_modify_wiki: "受信任使用者將可以修改 Wiki"
+      trust_user_can_modify_wiki: "受信任使用者將可以修改教程"
     topic_list: "討論串列表"
     check_photo: "查看圖片"
