--- a/config/locales/pages.zh-CN.yml
+++ b/config/locales/pages.zh-CN.yml
@@ -3,10 +3,10 @@
     describe_this_time_change: "描述你本次修改的内容。"
     edit_page: "修改页面"
     create_page: "创建新页面"
-    create_new_wiki_page: "创建维基页面"
-    new_wiki_page: "创建维基页面"
-    edit_wiki_page: "维基页面编辑"
-    modify_wiki_page: "修改维基页面"
-    wiki_index: "维基目录"
+    create_new_wiki_page: "创建教程页面"
+    new_wiki_page: "创建教程页面"
+    edit_wiki_page: "教程页面编辑"
+    modify_wiki_page: "修改教程页面"
+    wiki_index: "教程目录"
     wiki_page_contributors: "本页贡献者:"
     wiki_page_lock_warning: "抱歉，此页面已被锁定，只能管理员才能修改。"
